gap fix test

--- a/scss/screen-sizes/tablet/_tablet.scss
+++ b/scss/screen-sizes/tablet/_tablet.scss
@@ -295,9 +295,12 @@ button {
     @include flexRow;
     justify-content: center;
 
-    > *:not(:last-child) {
-        margin-right: 50px;
+    @supports not (gap: 50px) {
+        > *:not(:last-child) {
+            margin-right: 50px;
+        }
     }
+    
 
     gap: 50px;
 
